# newsletter-app-vercel

./: .gitignore  Dockerfile.backend  Dockerfile.worker  README.md  docker-compose.yaml  entrypoint.sh  my.cnf  pyproject.toml
backend/: .env.example  alembic.ini  config.py  containers.py  database.py  database_models.py  main.py
backend/common/: auth.py  celery.py
backend/jwt/application/: jwt_service.py
backend/jwt/domain/: jwt_decoder.py  jwt_encoder.py
backend/jwt/infra/: jwt_decoder.py  jwt_encoder.py
backend/migrations/: env.py
backend/migrations/versions/: 2025_01_08_0118-c8504d60e36a_create_tables.py  2025_01_08_0119-e4ee6b6ea883_create_tables.py
backend/news/application/: news_service.py
backend/news/domain/: news.py
backend/news/domain/repository/: news_repo.py
backend/news/infra/db_models/: newsletter.py
backend/news/infra/repository/: news_repo.py
backend/news/interface/controllers/: news_controller.py
backend/newsletter/: newsletter_generator.py
backend/newsletter/graph/: graph.py  parse.py  prompts.py  state.py  visualize.py
backend/newsletter/graph/nodes/: creator.py  search.py  search_optimizer.py  summary.py
backend/user/application/: user_service.py
backend/user/domain/: user.py
backend/user/domain/repository/: user_repo.py
backend/user/infra/db_models/: users.py
backend/user/infra/repository/: user_repo.py
backend/user/interface/controllers/: user_controller.py
backend/utils/: crypto.py  db_utils.py
frontend/: .prettierrc.cjs  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/create-newsletter/: actions.ts  page.tsx
frontend/src/components/: navbar.tsx  theme-switch.tsx
frontend/src/hooks/: use-debounce.ts  use-debounced-callback.ts
frontend/src/icons/: index.ts  logout.tsx  search-linear.tsx
frontend/src/providers/: ssr-provider.tsx
frontend/src/styles/: primitives.ts
frontend/src/utils/: clsx.ts
(+14 files in other folders)
